# midi-sketch-bach

./: .clang-format  .editorconfig  .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  LICENSE  LICENSE-COMMERCIAL  Makefile  README.md  README_ja.md  package.json  tsconfig.json  vitest.config.ts
src/: CMakeLists.txt  bach_c.cpp  bach_c.h  cli_main.cpp  generator.cpp  generator.h  generator_internal.h
src/analysis/: analysis_runner.cpp  analysis_runner.h  analysis_utils.cpp  analysis_utils.h  cadence_detector.cpp  cadence_detector.h  counterpoint_analyzer.cpp  counterpoint_analyzer.h  dissonance_analyzer.cpp  dissonance_analyzer.h  fail_report.cpp  fail_report.h  fugue_analyzer.cpp  fugue_analyzer.h  implied_voice_analyzer.cpp  implied_voice_analyzer.h  voice_harmony_analyzer.cpp  voice_harmony_analyzer.h  voice_independence.cpp  voice_independence.h
src/constraint/: constraint_state.cpp  constraint_state.h  episode_generator.cpp  episode_generator.h  feasibility_estimator.cpp  feasibility_estimator.h  feasibility_harness.cpp  feasibility_harness.h  motif_constraint.cpp  motif_constraint.h  obligation.cpp  obligation.h  obligation_analyzer.cpp  obligation_analyzer.h
src/core/: bach_vocabulary.h  basic_types.cpp  basic_types.h  figure_injector.h  figure_match.cpp  figure_match.h  form_profile.h  gm_program.h  gravity_reference_data.inc  harmonic_bigram_data.inc  interval.cpp  interval.h  json_helpers.cpp  json_helpers.h  json_parser.cpp  json_parser.h  markov_tables.cpp  markov_tables.h  markov_tables_data.inc  melodic_state.h  note_creator.cpp  note_creator.h  note_source.cpp  note_source.h  phrase_structure.cpp  phrase_structure.h  pitch_utils.cpp  pitch_utils.h  rhythm_pattern.cpp  rhythm_pattern.h  rng_util.h  scale.cpp  scale.h  version_info.h.in  vocabulary_data.inc
src/counterpoint/: bach_rule_evaluator.cpp  bach_rule_evaluator.h  cantus_firmus.cpp  cantus_firmus.h  collision_resolver.cpp  collision_resolver.h  coordinate_voices.cpp  coordinate_voices.h  counterpoint_state.cpp  counterpoint_state.h  counterpoint_validator.cpp  counterpoint_validator.h  cross_relation.cpp  cross_relation.h  fux_rule_evaluator.cpp  fux_rule_evaluator.h  i_rule_evaluator.cpp  i_rule_evaluator.h  leap_resolution.cpp  leap_resolution.h  melodic_context.cpp  melodic_context.h  motion_analyzer.cpp  motion_analyzer.h  parallel_repair.cpp  parallel_repair.h  repeated_note_repair.cpp  repeated_note_repair.h  species_rules.cpp  species_rules.h  suspension_chain.cpp  suspension_chain.h  vertical_context.cpp  vertical_context.h  vertical_safe.h  voice_manager.cpp  voice_manager.h
src/expression/: articulation.cpp  articulation.h  expression_curve.cpp  expression_curve.h  phrase_detector.cpp  phrase_detector.h
src/forms/: chorale_prelude.cpp  chorale_prelude.h  fantasia.cpp  fantasia.h  form_constraint_setup.cpp  form_constraint_setup.h  form_utils.h  gesture_template.cpp  gesture_template.h  passacaglia.cpp  passacaglia.h  prelude.cpp  prelude.h  prelude_figuration.cpp  prelude_figuration.h  toccata.cpp  toccata.h  toccata_concertato.cpp  toccata_figuration.h  toccata_internal.h  toccata_perpetuus.cpp  toccata_sectionalis.cpp  trio_sonata.cpp  trio_sonata.h
src/fugue/: answer.cpp  answer.h  archetype_policy.cpp  archetype_policy.h  archetype_scorer.cpp  archetype_scorer.h  cadence_insertion.cpp  cadence_insertion.h  cadence_plan.cpp  cadence_plan.h  cadence_vocabulary.h  countersubject.cpp  countersubject.h  episode.cpp  episode.h  exposition.cpp  exposition.h  fortspinnung.cpp  fortspinnung.h  fugue_config.cpp  fugue_config.h  fugue_generator.cpp  fugue_generator.h  fugue_pipeline.cpp  fugue_pipeline.h  fugue_structure.cpp  fugue_structure.h  fugue_vocabulary.h  middle_entry.cpp  middle_entry.h  motif_pool.cpp  motif_pool.h  motif_template.cpp  motif_template.h  stretto.cpp  stretto.h  subject.cpp  subject.h  subject_identity.cpp  subject_identity.h  (+10 more)
src/harmony/: chord_function.h  chord_tone_utils.cpp  chord_tone_utils.h  chord_types.cpp  chord_types.h  chord_voicer.cpp  chord_voicer.h  harmonic_event.h  harmonic_function.cpp  harmonic_function.h  harmonic_rhythm.cpp  harmonic_rhythm.h  harmonic_tension.cpp  harmonic_tension.h  harmonic_time_warp.cpp  harmonic_time_warp.h  harmonic_timeline.cpp  harmonic_timeline.h  key.cpp  key.h  modulation_plan.cpp  modulation_plan.h  scale_degree_utils.cpp  scale_degree_utils.h  tempo_map.cpp  tempo_map.h  voice_leading_planner.cpp  voice_leading_planner.h
src/midi/: midi_reader.cpp  midi_reader.h  midi_stream.cpp  midi_stream.h  midi_writer.cpp  midi_writer.h  velocity_curve.cpp  velocity_curve.h
src/organ/: manual.cpp  manual.h  organ_techniques.cpp  organ_techniques.h  pedal_constraints.h  registration.cpp  registration.h
src/ornament/: appoggiatura.cpp  appoggiatura.h  compound_ornament.cpp  compound_ornament.h  mordent.cpp  mordent.h  nachschlag.cpp  nachschlag.h  ornament_engine.cpp  ornament_engine.h  ornament_types.cpp  ornament_types.h  pralltriller.cpp  pralltriller.h  schleifer.cpp  schleifer.h  trill.cpp  trill.h  turn.cpp  turn.h  vorschlag.cpp  vorschlag.h
src/solo_string/: solo_vocabulary.h
src/transform/: motif_transform.cpp  motif_transform.h  sequence.cpp  sequence.h
tests/: CMakeLists.txt  generator_overlap_test.cpp  generator_test.cpp  test_helpers.h
tests/analysis/: analysis_runner_test.cpp  cadence_detector_test.cpp  counterpoint_analyzer_test.cpp  cross_relation_test.cpp  dissonance_analyzer_test.cpp  fail_report_test.cpp  fugue_analyzer_test.cpp  implied_voice_analyzer_test.cpp  voice_harmony_analyzer_test.cpp  voice_independence_test.cpp
tests/constraint/: constraint_state_test.cpp  feasibility_harness_test.cpp  motif_constraint_test.cpp  obligation_test.cpp  vocabulary_attestation_test.cpp
tests/core/: basic_types_test.cpp  duration_scale_test.cpp  figure_match_test.cpp  interval_test.cpp  json_helpers_test.cpp  markov_tables_test.cpp  melodic_state_test.cpp  note_creator_test.cpp  note_source_test.cpp  phrase_structure_test.cpp  pitch_utils_test.cpp  rhythm_pattern_test.cpp  rng_util_test.cpp  scale_test.cpp
(+797 files in other folders)
